sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value estPlusPetit
	while ((j > 0) && (!estPlusPetit(j-1,v))) {
                            ^